*** Facebook for WooCommerce Changelog ***

2019-02-11 - Version 1.9.10
* Add facebook support link, this will help merchants to reach out to facebook customer service.

2018-12-30 - Version 1.9.9
* Fix issue with missing file in v1.9.8
* Remove misleading content relating to Instagram which is not launched yet.

2018-11-30 - Version 1.9.8
* Prevent Show/Hide button auto scroll.
* DIY entry field for FB product Image.
* Initial Support for Advanced Bulk Edit.
* Added Option to Use short description instead of description.
* Added checkbox for disable sync with FB for dev environment.
* Add New Advanced Option : Auto Force Resync on Schedule.
* Don't sync out of stock items to FB depending on Woo setting.
* Add custom price.
* Fix 502 Bad Gateway Error When Redirect.
* Sync composite product with calculating the price based on the price of sub-items.
* Advanced Options Toggle in Configuration Screen.

2018-11-01 - Version 1.9.7
* Support messenger chat customization dialog
* Add Copyright header.
* Fix lowercasting product description.
* Fix Connect Woo AYMT Logic Flow and improve Logging.

2018-09-21 - Version 1.9.6
* Update plugin description of new design for WooCommerce.
* Remove get_date() in Woocommerce plugin.
* Add External Action-to-Make Channel Support.

2018-08-14 - Version 1.9.5
* Fix Subscription Event Injection

2018-08-10 - Version 1.9.4
* Support Lead Gen Event - Contact Form 7
* Separate Redirect Entry Point Logging
* Fix undefined variable warnings.
* Add a Settings link to the plugin config page from the WP Plugins page.
* Adding filter to Pixel init for injection of fbq(consent, revoke) (GDPR)

2018-08-01 - Version 1.9.3
* Add Edge Cases for Integration Test.
* Fix Undefined PHP Warning.
* Add subscribe event.
* Fix Unable to Change Pixel after Setup.
* Fix Integration Test Confirmation Dialog.

2018-07-08 - Version 1.9.2
* Exclude Virtual Variation and Set Staging.
* Add Version Number for Logging.

2018-06-22 - version 1.9.1