@@ -1,45 +1,0 @@
-
-# Facebook for WooCommerce
-
-Grow your business with Facebook for WooCommerce! This plugin will install a Facebook Pixel and optionally create a shop
-on your Facebook page.
-
-## Get started
-
-[Visit Facebook for WooCommerce in the WooCommerce store](https://woocommerce.com/products/facebook/)
-
-## Requirements
-
-Facebook for WooCommerce requires
-* WooCommerce version 3 or higher
-* Wordpress 4.4+ or higher
-* PHP 5.6 or greater
-* MySQL 5.6 or greater
-* WP Memory limit of 128 MB or greater (256 MB or higher is preferred)
-
-## Full documentation
-
-[Get started with Facebook for WooCommerce at our help center](https://www.facebook.com/business/help/900699293402826)
-
-## Support
-
-Facebook has a [bounty program](https://www.facebook.com/whitehat/) for the safe
-disclosure of security bugs. In those cases, please go through the process
-outlined on that page and do not file a public issue.
-
-Otherwise, please submit an Issue [here](https://github.com/facebookincubator/facebook-for-woocommerce/issues).
-
-When opening an issue, please give us as many details as possible.
-* symptoms of your problem
-* screen shot if possible
-* your Facebook page url
-* your website url
-* current version of Facebook-for-WooCommerce, WooCommerce, Wordpress, PHP
-
-## Contributing
-
-See the CONTRIBUTING file for how to help out.
-
-## License
-
-Facebook for WooCommerce is GPLv2-licensed.
