@@ -310,7 +310,7 @@ class WC_Facebookcommerce_EventsTracker {
     $content_type = 'product';
     $product_ids = array();
     foreach ($order->get_items() as $item) {
-      $product = wc_get_product(apply_filters('facebook_woocommerce_pixel_purchase_event_get_product_id', $item['product_id'], $item));
+      $product = wc_get_product($item['product_id']);
       $product_ids = array_merge(
         $product_ids,
         WC_Facebookcommerce_Utils::get_fb_content_ids($product));
