@@ -1,0 +1,38 @@
+=== Facebook for WooCommerce ===
+Contributors: facebook4woocommerce
+Tags: facebook, shop, catalog, advertise, pixel, product
+Requires at least: 4.4
+Tested up to: 4.9.8
+Stable tag: 1.9.5
+Requires PHP: 5.6
+MySQL: 5.6 or greater
+License: GPLv2 or later
+License URI: https://www.gnu.org/licenses/gpl-2.0.html
+
+Get the Official Facebook for WooCommerce plugin for two powerful ways to help grow your business, including an ads extension and shops tab for your page.
+
+== Description ==
+
+This is the official Facebook for WooCommerce plugin that connects your WooCommerce website to Facebook. With this plugin, you can install the Facebook pixel, upload your online store catalog, and create a shop on your Facebook page, enabling you to easily run dynamic ads. 
+
+Marketing on Facebook helps your business build lasting relationships with people, find new customers, and increase sales for your online store. With this Facebook ad extension, reaching the people who matter most to your business is simple. This extension will track the results of your advertising across devices. It will also help you: 
+
+* Maximize your campaign performance. By setting up the Facebook pixel and building your audience, you will optimize your ads for people likely to buy your products, and reach people with relevant ads on Facebook after they’ve visited your website.
+* Find more customers. Connecting your product catalog automatically creates carousel ads that showcase the products you sell and attract more shoppers to your website.
+* Generate sales among your website visitors. When you set up the Facebook pixel and connect your product catalog, you can use dynamic ads to reach shoppers when they’re on Facebook with ads for the products they viewed on your website. This will be included in a future release of Facebook for WooCommerce.
+
+== Installation ==
+
+Visit the Facebook Help Center [here](https://www.facebook.com/business/help/900699293402826).
+
+== Support ==
+
+If you believe you have found a security vulnerability on Facebook, we encourage you to let us know right away. We investigate all legitimate reports and do our best to quickly fix the problem. Before reporting, please review [this page](https://www.facebook.com/whitehat), which includes our responsible disclosure policy and reward guideline. You can submit bugs [here](https://github.com/facebookincubator/facebook-for-woocommerce/issues) or contact advertising support [here](https://www.facebook.com/business/help/900699293402826). 
+
+When opening a bug on GitHub, please give us as many details as possible.
+
+* Symptoms of your problem
+* Screenshot, if possible
+* Your Facebook page URL
+* Your website URL
+* Current version of Facebook-for-WooCommerce, WooCommerce, Wordpress, PHP
